Product details not opening

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,7 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-
+body {
+  background-color: white;
+  color: black;
+}
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
